# kids_quiz_game

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  GITLAB_CI_TROUBLESHOOTING.md  Makefile  README.md  TEST_SUITE_SUMMARY.md  db.sqlite3  debug_environment.py  make_intro.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py
.github/workflows/: django.yml
docs/: TEST_SUITE_SUMMARY.md  audio_requirements.txt  testing.md
locale/ar/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.mo  django.po
locale/ha/LC_MESSAGES/: django.po
locale/ig/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
locale/yo/LC_MESSAGES/: django.po
mathquiz/: asgi.py  settings.py  urls.py  wsgi.py
quiz/: admin.py  context_processors.py  forms.py  general_knowledge_questions.py  models.py  test_emails.py  test_password_reset.py  test_password_reset_email_contents.py  test_password_reset_email_file_backend.py  tests.py  tests_parent_dashboard.py  tests_password_reset.py  urls.py  urls_stats.py  views.py  views_mixed.py  views_parent.py  views_password_reset.py  views_stats.py
quiz/management/commands/: send_test_email.py
quiz/migrations/: 0001_initial.py  0002_userprofile.py  0003_rename_name_userprofile_first_name_and_more.py  0004_userstat.py  0005_userprofile_profile_picture.py  0006_userprofile_age_group_userprofile_language_and_more.py  0007_assignment_assignmentresult_parentprofile.py  0008_alter_parentprofile_children.py  0009_alter_parentprofile_children.py
quiz/static/quiz/: extra.css  style.css  themes.css
quiz/templates/: base.html
quiz/templates/quiz/: about.html  animals_game.html  assignment_confirm_complete.html  assignment_confirm_delete.html  basic_questions.html  basic_questions_name_entry.html  basic_questions_result.html  child_assignments.html  colors_shapes.html  contact.html  home.html  (+32 more)
quiz/tests/: test_smtp_env.py
scripts/: render_template.py
staticfiles/quiz/: extra.css  style.css
(+23 files in other folders)
