[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kids-learning-game"
version = "1.0.0"
description = "A Django-based educational game for kids with math, spelling, and learning activities"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Games/Entertainment :: Educational",
]
dependencies = [
    "Django>=5.2.5",
    "gunicorn==23.0.0",
    "packaging==25.0",
    "Pillow",
    "whitenoise",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8", 
    "isort",
    "pre-commit",
    "safety",
    "bandit",
]
test = [
    "coverage",
    "pytest",
    "pytest-django",
]

[tool.black]
target-version = ['py310', 'py311', 'py312']
exclude = '''/(venv|\.venv|site-packages)/'''

[tool.isort]
profile = "black"
skip = ["venv", ".venv", "site-packages"]
known_django = "django"
known_first_party = ["mathquiz", "quiz"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = ["venv", ".venv", "site-packages", "migrations"]

[tool.coverage.run]
source = "."
omit = [
    "venv/*",
    ".venv/*", 
    "*/migrations/*",
    "*/venv/*",
    "manage.py",
    "*/settings/*",
    "*/tests/*",
]
